sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_arrivalspeed/errors.duarouter
Error: Attribute 'arrivalSpeed' in definition of a vehicle is empty.
Error: Invalid arrivalSpeed definition for vehicle '0'
Quitting (on error).
